--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,19 @@ body {
     width: 97vw;
     padding: 0;
     margin: 0 auto;
+    background-color: #004643;
+    color: #abd1c6;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 9vh auto;
+    align-items: start;
 }
 #navbar {
     width: 100%;
     min-height: 5vh;
+    max-height: 9vh;
     position: static;
-    background-color: #d1d1e9;
+    background-color: #abd1c6;
     color: #2b2c34;
     font-size: 1.5rem;
     display: flex;
@@ -30,29 +37,25 @@ body {
 }
 
 #navbar {
-    color: #6246ea;
+    color: #001e1d;
     text-decoration: none;
 }
 
 #navbar a:hover {
     transition: all 0.5s ease;
-    color: #e45858;
+    color: #fba72a;
 }
-#aboutmelink{
-    color: #e45858;
+#aboutmelink {
+    color: #fba72a;
 }
-/* media query para cambiar la dirección del flex? */
 section {
-    margin: auto 0;
+    margin-top: 3vh;
     min-width: 80vw;
     transition-property: opacity;
-    transition-duration: .25s;
+    transition-duration: 0.25s;
     transition-timing-function: ease-in-out;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
+    grid-row-start: 2;
+    grid-column-start: 1;
     opacity: 0;
 }
 
@@ -64,6 +67,7 @@ section {
     text-align: left;
     justify-content: space-evenly;
     opacity: 1;
+    color: #abd1c6;
 }
 
 #myinfo {
@@ -73,6 +77,7 @@ section {
 
 #name {
     font-family: "Mukta Vaani", "Sanchez";
+    color: #fffffe;
     font-size: 1.6rem;
     margin: -4px 0;
 }
