--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
     font-family: "Sanchez", "Roboto";
     padding: 0;
     margin: 0 auto;
-    font-size: 20px;
+    font-size: 22px;
 }
 body {
     min-height: 100vh;
@@ -79,7 +79,7 @@ section {
     font-family: "Mukta Vaani", "Sanchez";
     color: #fffffe;
     font-size: 1.6rem;
-    margin: -4px 0;
+    margin: -4px 0 10px 0;
 }
 #myphoto {
     aspect-ratio: initial;
@@ -97,22 +97,50 @@ section {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    margin: 2vh 0;
 }
 .icon {
-    height: 10vw;
-    width: 10vw;
-    margin-right: 10vw;
+    height: 6rem;
+    width: 4rem;
+    margin: 0px 8vw;
+    filter: invert(80%) sepia(12%) saturate(455%) hue-rotate(112deg) brightness(102%) contrast(85%);
 }
 
+.title{
+    color: #fffffe;
+    font-family: "Mukta Vaani", "Sanchez";
+    font-weight: 500;
+    text-align: center;
+    font-size: 1.6rem;
+    margin-bottom: 7vh;
+}
+.title p{
+    margin: -2rem 0;
+}
 .subtitle {
     font-size: 0.65rem;
+    color: #abd1c6;
 }
 
 .box {
-    border: black solid 1px;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: #2b2c34 5px;
+    background: #004643;
+    
+}
+.shadow-right{
+    box-shadow: 13px 13px 34px #002c2a, -13px -13px 34px #00605c;
+}
+.shadow-left{
+    box-shadow: -13px 13px 34px #002c2a, 13px -13px 34px #00605c;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    color: #fffffe;
 }
